--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,13 @@
 	<dependencies>
 		<dependency>
     <groupId>mysql</groupId>
-    <artifactId>mysql-connector-java</artifactId>
+    <artifactId>mysql-connector-j</artifactId>
     <version>8.0.33</version>
 </dependency>
+
+
+
+
 
 
 
