--- a/pom.xml
+++ b/pom.xml
@@ -38,13 +38,9 @@
 	<dependencies>
 		<dependency>
     <groupId>mysql</groupId>
-    <artifactId>mysql-connector-j</artifactId>
+    <artifactId>mysql-connector-java</artifactId>
     <version>8.0.33</version>
 </dependency>
-
-
-
-
 
 
 
